--- a/banner.css
+++ b/banner.css
@@ -1,16 +1,32 @@
-#banner-parent{
-    display: table-cell;
-    vertical-align: middle;
-    text-align: center;
+.image-container {
+    display: flex;
+    justify-content: center;
 }
-#banner-list {
+.slogan-img{
+    background-image: url(img/Slogan-PixTeller.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 0;
+    padding-top: 37.01%; /* (img-height / img-width * container-width) */
+                /* (853 / 1280 * 100) */
+}
+
+#banner-list{
     list-style-type: none;
-    overflow: hidden;
-    margin: 0;
-  padding: 0;
-    text-align: right;
+    display: flex;
+    justify-content: center;
 }
+
 #banner-list li{
-    background-position: 100% .4em;
-    padding-right: .6em;
+    padding: 5px;
+    display: inline;
+}
+.list-style{
+    display: flex;
+    flex-direction: row;
+}
+.list-icon{
+    display: flex;
+    flex-direction: row;
 }
