--- a/banner.css
+++ b/banner.css
@@ -30,3 +30,13 @@
     display: flex;
     flex-direction: row;
 }
+
+.nav-style a:hover{
+    background-image: url(img/List-hover-PixTeller.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 0;
+    padding-top: 20%; /* (img-height / img-width * container-width) */
+                /* (853 / 1280 * 100) */
+    color: black;
