--- a/nav.css
+++ b/nav.css
@@ -1,6 +1,7 @@
 #menu-nav {
-  max-width: 100%px;
-  margin: 10px auto;
+  max-width: auto;
+  margin: 2px auto;
+  padding: 2px 16px 2px 16px;
   background-color: black;
   border-radius: 4px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
@@ -10,30 +11,36 @@
   border-radius: 4px;
   overflow: hidden;
 }
+
 #navigation-bar li {
   float: left;
-  width: 20%;
+  width: 160px;
 }
+
 #navigation-bar li:hover a::before {
-  right: 0;
-  left: 0;
+  right: 25%;
+  left: 0%;
 }
+
 #navigation-bar a {
-  color: white;
-  font-size: 15px;
+  color: rgb(255, 255, 255);
+  font-size: 16px;
   text-decoration: none;
-  text-align: center;
-  padding: 15px 0;
+  text-align: left;
+  padding: 10px 0 10px 10px;
+  margin: 0px;
   display: block;
   position: relative;
   transition: all 0.3s ease;
 }
+
 #navigation-bar a:hover {
   color: #1df04a;
 }
+
 #navigation-bar a::before {
   content: "";
-  transition: all 0.8s ;
+  transition: all 0.8s;
   position: absolute;
   right: 50%;
   left: 50%;
@@ -41,15 +48,28 @@
   height: 2px;
   background-color: #1df04a;
 }
+
 #navigation-bar a:hover::before {
   right: 0;
   left: 0;
 }
 
-#navigation-bar i {
-  margin-right:10px;
+#navigation-bar li i {
+  margin-right: 5px;
 }
 
 li {
-	list-style: none;
+  list-style: none;
+}
+
+.social-part i {
+  color: white;
+  font-size: 16px;
+  margin: 10px;
+  width: 20px;
+}
+
+.social-part a {
+  margin: 0px;
+  padding: 0px;
 }
