--- a/banner.css
+++ b/banner.css
@@ -2,31 +2,35 @@
     display: flex;
     justify-content: center;
 }
-.slogan-img{
-    background-image: url(img/Slogan-PixTeller.png);
+
+.slogan-img {
+    background-image: url(img/webimg/Slogan-PixTeller.png);
     background-size: contain;
     background-repeat: no-repeat;
     width: 100%;
     height: 0;
-    padding-top: 37.01%; /* (img-height / img-width * container-width) */
-                /* (853 / 1280 * 100) */
+    padding-top: 37.01%;
+    /* (img-height / img-width * container-width) */
+    /* (853 / 1280 * 100) */
 }
 
-#banner-list{
+#banner-list {
     list-style-type: none;
     display: flex;
     justify-content: center;
 }
 
-#banner-list li{
+#banner-list li {
     padding: 5px;
     display: inline;
 }
-.list-style{
+
+.list-style {
     display: flex;
     flex-direction: row;
 }
-.list-icon{
+
+.list-icon {
     display: flex;
     flex-direction: row;
 }
