--- a/contact.css
+++ b/contact.css
@@ -1,50 +1,51 @@
-ul{
-    margin: 0;
-    padding: 0;
+ul {
+	margin: 0;
+	padding: 0;
 }
 
-.address{
+.address {
 	margin: 0 0 30px 0;
 	padding: 0 0 40px 90px;
 	list-style: none;
-	background-image: url("img/icon/letter.png");
+	background-image: url("img/webimg/icon/address.png");
 	background-repeat: no-repeat;
 	background-position: left center;
 	background-size: 60px;
-    font-weight: 800;
-    font-size: 20px;
+	font-weight: 800;
+	font-size: 20px;
 }
 
 
-.phone{
+.phone {
 	margin: 0 0 30px 0;
 	padding: 0 0 30px 90px;
 	list-style: none;
-	background-image: url("img/icon/phone.png");
+	background-image: url("img/webimg/icon/phone.png");
 	background-repeat: no-repeat;
 	background-position: left center;
 	background-size: 60px;
-    font-weight: 800;
-    font-size: 20px;}
+	font-weight: 800;
+	font-size: 20px;
+}
 
-.mail{
+.mail {
 	margin: 0 0 30px 0;
 	padding: 0 0 30px 90px;
 	list-style: none;
-	background-image: url("img/icon/address.png");
+	background-image: url("img/webimg/icon/email.png");
 	background-repeat: no-repeat;
 	background-position: left center;
 	background-size: 70px;
-    font-weight: 800;
-    font-size: 20px;
+	font-weight: 800;
+	font-size: 20px;
 }
 
-.map{
-    height: 80%;
-    width: 100%;
-    padding-bottom: 20px;
+.map {
+	height: 80%;
+	width: 100%;
+	padding-bottom: 20px;
 }
 
-.btn btn-primary{
-    float: right;
+.btn btn-primary {
+	float: right;
 }
