--- a/home.css
+++ b/home.css
@@ -8,7 +8,7 @@
 .header-text {
     position: absolute;
     top: 20%;
-    left: 1.8%;
+    left: 10%;
     right: auto;
     width: 96.66666666666666%;
     color: black;
@@ -19,11 +19,10 @@
 }
 
 .header-text h2 span {
-    background-color: #2980b9;
+    background-color: rgba(0, 0, 0, 0.301);
     padding: 10px;
 }
 
 .header-text h3 span {
-    background-color: #000;
     padding: 15px;
 }
