--- a/home.css
+++ b/home.css
@@ -26,3 +26,74 @@
 .header-text h3 span {
     padding: 15px;
 }
+
+#left-welcome h2,h4 {
+    font-family: 'Zhi Mang Xing', cursive;
+    text-align: center;
+}
+
+#left-welcome {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    padding: 15px;
+}
+
+
+#welcome-poster {
+    height: 450px;
+    border: solid;
+    border-color: #09ed37;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    
+}
+
+.scrollbar
+{
+	float: left;
+	height: 450px;
+	width: 105px;
+	background-color: transparent;
+	overflow-y: auto;
+	margin-bottom: 15px;
+}
+
+.force-overflow
+{
+	min-height: 450px;
+}
+
+#style-15::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+	background-color: #ECD9D5;
+}
+
+#style-15::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+#style-15::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-color: #ECD9D5;
+	background-image: -webkit-gradient(linear,
+									   40% 0%,
+									   75% 84%,
+									   from(#4D9C41),
+									   to(#19911D),
+									   color-stop(.6,#54DE5D))
+}
+
+#wrapper
+{
+	text-align: center;
+	margin: 5px;
+    border: solid;
+    border-radius: 10px;
+    border-color: #00fa0c;
+    background-color: #ECD9D5;
+}
