--- a/home.css
+++ b/home.css
@@ -1,28 +1,45 @@
 .carousel-indicators li {
-    background-color: black;
+    background-color: rgba(255, 255, 255, 0.192);
     border-radius: 100%;
-    height: 15px;
-    width: 15px;
+    height: 10px;
+    width: 10px;
 }
 
 .header-text {
     position: absolute;
     top: 20%;
-    left: 10%;
+    left: 0%;
     right: auto;
     width: 96.66666666666666%;
     color: black;
 }
 
 .header-text h2 {
-    font-size: 40px;
+    font-size: 70px;
 }
 
 .header-text h2 span {
     background-color: rgba(0, 0, 0, 0.301);
+    color: white;
     padding: 10px;
 }
 
 .header-text h3 span {
-    padding: 15px;
+    background-color: rgba(0, 0, 0, 0.301);
+    color: white;
+    padding: 10px;
+}
+
+.getBtn {
+    background-color: green;
+    border-radius: 7%;
+    padding: 12px;
+    font-size: 30px;
+    color: white;
+    border-style: none;
+}
+
+.getBtn:hover {
+    color: black;
+    text-decoration: none;
 }
